manifests/doc-index-updater/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-index-updater
  namespace: doc-index-updater
spec:
  replicas: 2
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyCPU: 50m
    spec:
      containers:
        - name: doc-index-updater
          image: mhraproducts4853registry.azurecr.io/products/doc-index-updater
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 200Mi
